[gd_scene load_steps=6 format=2]

[ext_resource path="res://Levels/Tutorial.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameCore.gd" type="Script" id=2]
[ext_resource path="res://GameParts/EndWall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Section1.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameParts/Player/Player.tscn" type="PackedScene" id=5]

[node name="GameCore" type="Node2D"]
script = ExtResource( 2 )

[node name="Dummy" type="Node2D" parent="."]

[node name="Tutorial" parent="." instance=ExtResource( 1 )]

[node name="Section1" parent="." instance=ExtResource( 4 )]
position = Vector2( 1536, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 224, -8 )

[node name="EndWall" parent="." instance=ExtResource( 3 )]
position = Vector2( 60, 168 )
z_index = 4
[connection signal="body_entered" from="EndWall" to="." method="_on_EndWall_body_entered"]
